Class.newInstance() is deprecated in Java 9+.